feat: Migrate project to use JPA with H2